CORRECTION: test-parameter gap closed over REST; JDK baseline 21 -> 25
Probe 9 retracts "there is no REST path to define a test parameter", held
since probe 4 after 5 failed POST step-parameters attempts. It was a shape
bug plus a missed collection, not a genuine gap.

Two entities, not one:
  test-parameter (TP_*) DEFINES a parameter on a test
  step-parameter (SP_*) RECORDS A VALUE against a defined one

step-parameter.parent-id is the test-parameter id, not the design-step or
test id. Earlier probes passed the owner id there, so the opaque 500
"Test parameter does not exist" was literally true.

Verified (all HTTP-checked, sandbox, cleaned up, orphan sweep 0):
- POST tests/{id}/test-parameters with name + ref-count -> 201
- Q34 = YES: an entity-encoded <<<name>>> token in a REST-written design
  step registers a real parameter; the token name survives round-trip
- POST step-parameters -> 201 for owner types design-step and test
- PUT test-parameters/{id} default-value -> 200, which OTA cannot do
- OTA cross-check confirms the REST-created objects are real

NEW WRITE HAZARD: ref-count is metadata editable:false/required:false yet
the create 500s without it and succeeds with it. Field metadata does not
fully describe writes. On a 500 naming "missing required field <PHYSICAL>",
retry once including it. This joins the load-bearing field-order rule in
the BFF write-safety component.

Consequences: the only generator-blocking gap is gone. ADR 0003's sidecar
drops from three justifying gaps to two (BPT components, similar-defects)
and no longer blocks the generator, so P6 is genuinely optional.
Feasibility matrix FULL 53->54, PARTIAL 51->50; achievable still 126/218.

Also: ADR 0002 JDK baseline revised 21 -> 25 LTS at the user's direction.
Spring Framework 7 fully tests only the LTS line (17/21/25) and recommends
25+ for production; Spring Boot 4.0 supports up to Java 25, so pin Boot
4.0.x or later. JDK 25.0.4 verified installed; 11 refs swept across docs.

Second over